--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.17.1",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
-    "mongoose": "^4.13.5"
+    "mongoose": "^4.13.5",
+    "react-router-dom": "^4.2.2"
   }
 }
