--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express": "^4.15.4",
     "jquery": "^3.2.1",
     "mongoose": "^4.13.5",
+    "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2"
   }
 }
