--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.17.1",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
+    "moment": "^2.19.3",
     "mongoose": "^4.13.5",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
