--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.13.5",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
+    "react-countdown-clock": "^2.0.0",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2"
   }
