--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-bootstrap": "^0.31.5",
     "react-countdown-clock": "^2.0.0",
     "react-dom": "^16.1.1",
+    "react-modal": "^3.1.6",
+    "react-responsive-modal": "^2.0.0",
     "react-router-dom": "^4.2.2"
   }
 }
