--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "jquery": "^3.2.1",
     "moment": "^2.19.3",
     "mongoose": "^4.13.5",
+    "phaser": "^2.6.2",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-countdown-clock": "^2.0.0",
     "react-dom": "^16.1.1",
     "react-modal": "^3.1.6",
+    "react-phaser": "^0.1.6",
     "react-responsive-modal": "^2.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "socket.io": "^2.0.4"
   }
 }
