--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "phaser": "^2.6.2",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
-    "react-countdown-clock": "^2.0.0",
+    "react-countdown-now": "^1.2.0",
     "react-dom": "^16.1.1",
     "react-modal": "^3.1.6",
     "react-phaser": "^0.1.6",
