--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-phaser": "^0.1.6",
     "react-responsive-modal": "^2.0.0",
     "react-router-dom": "^4.2.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "swearjar": "^0.2.0"
   }
 }
